--- a/aula-1/index.html
+++ b/aula-1/index.html
@@ -3,8 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Aula 1 - Bootcamp Full Stack Developer TQI</title>
+        <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
         <link rel="stylesheet" href="style.css">
-        <title>Github - Bootcamp Full Stack Developer TQI</title>
     </head>
     <body>
         <div class="container">
