feat: complementa links sociais na aula 3

--- a/aula-3/index.html
+++ b/aula-3/index.html
@@ -18,8 +18,9 @@
                 </ul>
             </div>
             <div class="social">
-                <a href="#">Linkedin</a>
-                <a href="#">Github</a>
+                <a href="https://www.linkedin.com/in/alex-praxedes/">Linkedin</a>
+                <a href="https://github.com/Alexpraxedes">Github</a>
+                <a href="https://alexpraxedes.com.br/">Website</a>
             </div>
         </main>
     </body>
